# messaging-framework

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  README  README.md  conanfile.txt
.github/workflows/: cmake.yml
cmake/: generate_proto.cmake  generate_proto_files.cmake
include/protocol/: command_table.h  datetime.cpp  datetime.h  msgfactory.cpp  msgfactory.h  typecommand_traits.h
include/protocol/proto/: datetime.proto  request.proto  response.proto
proto/: CMakeLists.txt  request.proto
protocol/: CMakeLists.txt  command_table.h  datetime.cpp  datetime.h  msgfactory.cpp  msgfactory.h  protocol.h  typecommand_traits.h
test/: CMakeLists.txt  main.cpp  test.cpp  testRequest.cpp
